# souschef

./: Cargo.toml  Gemfile  LICENSE.txt  README.md  souschef.gemspec
data/: chefspec.erb  gemfile.yml  license.erb  metadata.erb  rakefile.erb  readme.erb  recipe.erb  serverspec.erb  spec_helper.rb
data/chefspec/: chefspec.erb
data/rubocop/: rubocop.yml
data/serverspec/: serverspec.erb  serverspec_helper.rb
data/testkitchen/: kitchen.default.erb  kitchen.docker.erb  kitchen.yml
lib/: souschef.rb
lib/souschef/: berkshelf.rb  board.rb  config.rb  gemfile.rb  print.rb  rubocop.rb  runner.rb  scaffold.rb  spec.rb  template.rb  testkitchen.rb  version.rb
lib/souschef/configure/: file.rb
lib/souschef/template/: base.rb  chefspec.rb  license.rb  metadata.rb  rakefile.rb  readme.rb  rubocop.rb  serverspec.rb  spec_helper.rb
lib/souschef/testkitchen/: docker.rb  solusvm.rb  virtualbox.rb
src/: chef.rs  cli.rs  config.rs  lib.rs  main.rs  parse.rs
src/chef/: databag.rs  environment.rs  node.rs  role.rs  search.rs  ssh.rs
src/client/: headers.rs  request.rs
