[package]
name = "souschef"
description = "CLI utility to interact with Chef Server."
version = "0.2.0"
edition = "2021"
authors = ["Antun Krasic <antun.krasic@gmail.com>"]
repository = "https://github.com/akrasic/souschef"
license = "MIT"

[lib]
name = "souschef"
path = "src/lib.rs"

[[bin]]
name = "souschef"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = {version = "4.5.23", features = ["derive"]}
colored = "2.2.0"
dirs = "5.0.1"
openssh = "0.11.4"
openssl = "0.10.68"
regex = "1.11.1"
reqwest = { version = "0.12.9", features=["json", "default-tls"]}
serde = {version = "1.0.216", features=["derive"]}
serde_json = "1.0.133"
sha1 = "0.10.6"
thiserror = "2.0.9"
tokio = {version = "1", features = ["full"]}
url = "2.5.4"
urlencoding = "2.1.3"

[profile.release]
debug = 1           # enable for debugging
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

